# dprint-plugin-taplo

./: .dprintrc.json  .gitignore  Cargo.toml  README.md  dprint.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml
scripts/: createPluginFile.js  createPluginFile.mjs
src/: configuration.rs  format_text.rs  lib.rs  plugin.rs  process.rs  process_plugin.rs  wasm_plugin.rs
