[package]
name = "dprint-plugin-taplo"
version = "0.1.3"
authors = ["Tice Cosmos <tice@139.com>"]
edition = "2018"
license = "MIT"


[lib]
crate-type = ["lib", "cdylib"]


[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"


[features]
wasm = ["serde_json", "dprint-core/wasm"]
process = ["dprint-core/process"]


[dependencies]
dprint-core = { version = "0.35", features = ["formatting"] }

serde = { version = "*", features = ["derive"] }

serde_json = { version = "*", optional = true }

[dependencies.taplo]
git = "https://github.com/TiceCosmos/taplo.git"
branch = "remove_wasm_bindgen_format"
features = ["schema", "serde", "verify"]


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
structopt = "0.3"
