[package]
name = "dprint-plugin-taplo"
version = "0.1.5"
authors = ["Tice Cosmos <tice@139.com>"]
edition = "2018"
license = "MIT"


[lib]
crate-type = ["lib", "cdylib"]


[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"


[features]
wasm = ["serde_json", "dprint-core/wasm"]
process = ["dprint-core/process"]


[dependencies]
dprint-core = { version = "0.38", features = ["formatting"] }
taplo = { version = "0.5", features = ["schema", "serde", "verify"] }

serde = { version = "*", features = ["derive"] }

serde_json = { version = "*", optional = true }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
structopt = "0.3"


[[bin]]
name = "dprint-plugin-taplo"
path = "src/bin/process.rs"
required-features = ["process"]
