[package]
name = "dprint-plugin-taplo"
version = "0.5.4"
authors = ["Tice Cosmos <tice@139.com>"]
edition = "2018"
license = "MIT"


[lib]
crate-type = ["lib", "cdylib"]


[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"


[features]
wasm = ["dprint-core/wasm"]
process = ["dprint-core/process"]


[dependencies]
taplo = { version = "0.5.4", features = ["schema", "serde", "verify"] }

dprint-core = { version = "0.42", features = ["formatting"] }
serde_json = "1.0"

serde = { version = "*", features = ["derive"] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
structopt = "0.3"


[[bin]]
name = "dprint-plugin-taplo"
path = "src/process.rs"
required-features = ["process"]
